--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
   - rustup component add clippy
 script:
   - cargo fmt -- --check
+  - cd macros && cargo fmt -- --check && cd ..
   - cargo clippy
   - cargo build
   - cargo test
