--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,14 @@ version = "0.1.0"
 authors = ["Jacob Pratt <the.z.cuber@gmail.com>"]
 edition = "2018"
 build = "build.rs"
+publish = false
 
 [dependencies]
 rocket = "0.4"
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
 diesel = "1.3"
+enceladus_macros = { path = "./macros" }
 
 [dependencies.rocket_contrib]
 version = "0.4"
