--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,7 @@ publish = false
 [dependencies]
 rocket = "0.4"
 serde = { version = "1.0", features = ["derive"] }
-serde_derive = "1.0"
-diesel = "1.3"
+diesel = "1.4"
 enceladus_macros = { path = "./macros" }
 
 [dependencies.rocket_contrib]
@@ -19,5 +18,9 @@ default-features = false
 features = ["diesel_sqlite_pool", "json", "helmet"]
 
 [build-dependencies]
-diesel = "1.3"
-diesel_migrations = "1.3"
+diesel = "1.4"
+diesel_migrations = "1.4"
+
+[dev-dependencies]
+serde_json = "1.0"
+uuid = { version = "0.7", features = ["v4"] }
