--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,23 @@
 language: rust
+
 rust:
   - nightly-2018-12-15
+
 cache: cargo
+
 install:
   - rustup component add rustfmt
   - rustup component add clippy
+
 before_script:
-  - mkdir databases
-  - touch data.db
-  - diesel migration run --database-url databases/data.db
+  - psql -c 'CREATE DATABASE test_db;' -U postgres
+  - diesel migration run
+
 script:
   - ./precommit
 
 notifications:
   email: false
+
+servies:
+  - postgresql
