--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,26 +9,28 @@ build = "build.rs"
 publish = false
 
 [dependencies]
-diesel = "1.4"
-dotenv = "0.13"
+diesel = "1.4.1"
+dotenv = "0.13.0"
 enceladus_macros = { path = "./macros" }
-rocket = "0.4"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+jsonwebtoken = "5.0.1"
+rocket = "0.4.0"
+serde = { version = "1.0.85", features = ["derive"] }
+serde_json = "1.0.37"
+url = "1.7.2"
+uuid = { version = "0.7.1", features = ["v4"] }
 
 [dependencies.rocket_contrib]
 default-features = false
 features = ["diesel_postgres_pool", "json", "helmet"]
-version = "0.4"
+version = "0.4.0"
 
 [build-dependencies]
-diesel = "1.4"
-diesel_migrations = "1.4"
-dotenv = "0.13"
+diesel = "1.4.1"
+diesel_migrations = "1.4.0"
+dotenv = "0.13.0"
 
 [dev-dependencies]
-uuid = { version = "0.7", features = ["v4"] }
-rand = "0.6"
+rand = "0.6.4"
 
 [profile.release]
 incremental = false
