Restructure tests, bump nightly version
Each test should now only have one `Client`, as the base is mutable.
Additionally, the `create_user`, `create_global_admin`, and
`delete_user` methods have been extracted to a new helper module, which
also contains the existing `Client` struct. This new module also
contains `create` and `delete` methods for threads, but these are not
yet used; they will be once foreign keys are used and enforced on
sections and events.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: rust
 
 rust:
-  - nightly-2018-12-15
+  - nightly-2019-01-26
 
 cache: cargo
 
@@ -11,6 +11,7 @@ install:
 
 before_script:
   - psql -c 'CREATE DATABASE test_db;' -U postgres
+  - cargo install diesel_cli --no-default-features --features=postgres
   - diesel migration run
 
 script:
