--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,15 +13,15 @@ chrono = "0.4.6"
 diesel = "1.4.1"
 dotenv = "0.13.0"
 enceladus_macros = { path = "./macros" }
-hashbrown = "0.1.8"
 jsonwebtoken = "5.0.1"
 lazy_static = "1.2.0"
-parking_lot = "0.7.1"
+parking_lot = { version = "0.7.1", features = ["nightly", "deadlock_detection"] }
 rocket = "0.4.0"
 serde = { version = "1.0.85", features = ["derive"] }
 serde_json = "1.0.37"
 url = "1.7.2"
 uuid = { version = "0.7.1", features = ["v4"] }
+lru-cache = "0.1.1"
 
 [dependencies.rocket_contrib]
 default-features = false
