--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,16 +12,18 @@ publish = false
 chrono = "0.4.6"
 diesel = "1.4.1"
 dotenv = "0.13.0"
+dotenv_codegen = "0.11.0"
 enceladus_macros = { path = "./macros" }
+itertools = "0.8.0"
 jsonwebtoken = "5.0.1"
 lazy_static = "1.2.0"
+lru-cache = "0.1.1"
 parking_lot = { version = "0.7.1", features = ["nightly", "deadlock_detection"] }
+reqwest = "0.9.9"
 rocket = "0.4.0"
 serde = { version = "1.0.85", features = ["derive"] }
 serde_json = "1.0.37"
-url = "1.7.2"
 uuid = { version = "0.7.1", features = ["v4"] }
-lru-cache = "0.1.1"
 
 [dependencies.rocket_contrib]
 default-features = false
