--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ reqwest = "0.9.9"
 rocket = "0.4.0"
 serde = { version = "1.0.85", features = ["derive"] }
 serde_json = "1.0.37"
+tokio = "0.1.15"
 uuid = { version = "0.7.1", features = ["v4"] }
 
 [dependencies.rocket_contrib]
