--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ rocket = "0.4.0"
 serde = { version = "1.0.85", features = ["derive"] }
 serde_json = "1.0.37"
 uuid = { version = "0.7.1", features = ["v4"] }
+hashbrown = "0.1.8"
 
 [dependencies.rocket_contrib]
 default-features = false
