--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -9,7 +9,7 @@ publish = false
 
 [dependencies]
 chrono = "0.4.6"
-diesel = "1.4.1"
+diesel = { version = "1.4.1", features = ["serde_json"] }
 dotenv = "0.13.0"
 dotenv_codegen = "0.11.0"
 enceladus_macros = { path = "../macros" }
