--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
 
 before_script:
   - psql -c 'CREATE DATABASE test_db;' -U postgres
-  - cargo install diesel_cli --no-default-features --features=postgres --force
+  - test -x $HOME/.cargo/bin/diesel || cargo install diesel_cli --no-default-features --features=postgres
   - diesel migration run
 
 script:
