--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
+dist: xenial
 language: rust
+cache: cargo
 
 rust:
   - nightly-2019-01-26
-
-cache: cargo
 
 install:
   - rustup component add rustfmt
@@ -11,7 +11,8 @@ install:
 
 before_script:
   - psql -c 'CREATE DATABASE test_db;' -U postgres
-  - test -x $HOME/.cargo/bin/diesel || cargo install diesel_cli --no-default-features --features=postgres
+  - test -x $HOME/.cargo/bin/diesel || cargo install diesel_cli --no-default-features
+    --features=postgres
   - diesel migration run
 
 script:
@@ -20,5 +21,8 @@ script:
 notifications:
   email: false
 
-servies:
+services:
   - postgresql
+
+addons:
+  postgresql: '10'
