--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -19,6 +19,7 @@ jsonwebtoken = "5.0.1"
 lazy_static = "1.2.0"
 lru-cache = "0.1.1"
 parking_lot = { version = "0.7.1", features = ["nightly", "deadlock_detection"] }
+reddit = { path = "../reddit" }
 reqwest = "0.9.9"
 rocket = "0.4.0"
 serde = { version = "1.0.87", features = ["derive"] }
