--- a/reddit/Cargo.toml
+++ b/reddit/Cargo.toml
@@ -1,15 +1,13 @@
 [package]
-name = "enceladus_macros"
+name = "reddit"
 version = "0.1.0"
 authors = ["Jacob Pratt <the.z.cuber@gmail.com>"]
 edition = "2018"
 publish = false
 
-[lib]
-proc-macro = true
-
 [dependencies]
-proc-macro2 = "0.4.27"
-quote = "0.6.11"
-rand = "0.6.5"
-syn = "0.15.26"
+itertools = "0.8.0"
+lazy_static = "1.2.0"
+reqwest = "0.9.10"
+serde = "1.0.88"
+uuid = "0.7.2"
