--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,22 @@ install:
 
 before_script:
   - psql -c 'CREATE DATABASE test_db;' -U postgres
-  - test -x $HOME/.cargo/bin/diesel || cargo install diesel_cli --no-default-features
-    --features=postgres
+  - test -x $HOME/.cargo/bin/diesel || cargo install diesel_cli --no-default-features --features=postgres
+  - test -x $HOME/.cargo/bin/mdbook || cargo install --vers "^0.2" mdbook
   - diesel migration run
 
 script:
   - ./precommit
+  - mdbook build docs
+
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN
+  local-dir: docs/book
+  keep-history: false
+  on:
+    branch: master
 
 notifications:
   email: false
