Fix link in documentation, test links before deploying

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_script:
   - psql -c 'CREATE DATABASE test_db;' -U postgres
   - test -x $HOME/.cargo/bin/diesel || cargo install diesel_cli --no-default-features --features=postgres
   - test -x $HOME/.cargo/bin/mdbook || cargo install --vers "^0.2" mdbook
+  - test -x $HOME/.cargo/bin/mdbook-linkcheck || cargo install mdbook-linkcheck
   - diesel migration run
 
 script:
@@ -23,7 +24,7 @@ deploy:
   provider: pages
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
-  local-dir: docs/book
+  local-dir: docs/book/html
   keep-history: false
   on:
     branch: master
