--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -25,6 +25,7 @@ rocket = "0.4.0"
 serde = { version = "1.0.87", features = ["derive"] }
 serde_json = "1.0.38"
 uuid = { version = "0.7.2", features = ["v4"] }
+openssl = "0.10.18"
 
 [dependencies.rocket_contrib]
 default-features = false
@@ -33,3 +34,6 @@ version = "0.4.0"
 
 [dev-dependencies]
 rand = "0.6.5"
+
+[build-dependencies]
+openssl = "0.10.19"
