--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -26,6 +26,7 @@ serde = { version = "1.0.87", features = ["derive"] }
 serde_json = "1.0.38"
 uuid = { version = "0.7.2", features = ["v4"] }
 ws = "0.8.0"
+rocket_cors = "0.4.0"
 
 [dependencies.rocket_contrib]
 default-features = false
