--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -27,6 +27,7 @@ serde_json = "1.0.38"
 uuid = { version = "0.7.2", features = ["v4"] }
 ws = "0.8.0"
 rocket_cors = "0.4.0"
+enum_display = { path = "../enum_display" }
 
 [dependencies.rocket_contrib]
 default-features = false
