--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -8,11 +8,12 @@ edition = "2018"
 publish = false
 
 [dependencies]
+chrono = "0.4.6"
+derive_more = "0.14.0"
 diesel = { version = "1.4.1", features = ["serde_json"] }
 dotenv = "0.13.0"
 dotenv_codegen = "0.11.0"
 enceladus_macros = { path = "../macros" }
-enum_display = { path = "../enum_display" }
 hashbrown = "0.1.8"
 itertools = "0.8.0"
 jsonwebtoken = "5.0.1"
@@ -29,7 +30,6 @@ serde_json = "1.0.38"
 tokio = { version = "0.1.18", features = ["async-await-preview"] }
 uuid = { version = "0.7.2", features = ["v4"] }
 ws = "0.8.0"
-chrono = "0.4.6"
 
 [dependencies.rocket_contrib]
 default-features = false
