--- a/reddit/Cargo.toml
+++ b/reddit/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2018"
 publish = false
 
 [dependencies]
+derive_more = "0.14.0"
 itertools = "0.8.0"
 lazy_static = "1.2.0"
 reqwest = "0.9.10"
 serde = "1.0.88"
-uuid = "0.7.2"
 serde_json = "1.0.38"
-enum_display = { path = "../enum_display" }
+uuid = "0.7.2"
