--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -7,8 +7,12 @@ authors = ["Jacob Pratt <the.z.cuber@gmail.com>"]
 edition = "2018"
 publish = false
 
+[features]
+default = ["telemetry"]
+telemetry = ["chrono", "tokio"]
+
 [dependencies]
-chrono = "0.4.6"
+chrono = { version = "0.4.6", optional = true }
 derive_more = "0.14.0"
 diesel = { version = "1.4.1", features = ["serde_json"] }
 dotenv = "0.13.0"
@@ -27,7 +31,7 @@ rocket = "0.4.0"
 rocket_cors = "0.4.0"
 serde = { version = "1.0.87", features = ["derive"] }
 serde_json = "1.0.38"
-tokio = { version = "0.1.18", features = ["async-await-preview"] }
+tokio = { version = "0.1.18", features = ["async-await-preview"], optional = true }
 uuid = { version = "0.7.2", features = ["v4"] }
 ws = "0.8.0"
 
