Update Rust version & dependencies
Updated Rust version will eliminate false positives from clippy relating
to `const fn`s. Now we can _easily_ see that there are no actionable
changes clippy is suggesting.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,13 @@ language: rust
 cache: cargo
 
 rust:
-  - nightly-2019-03-05
+  - nightly-2019-03-12
+  - nightly
+
+matrix:
+  allow_failures:
+    - nightly
+  fast_finish: true
 
 install:
   - rustup component add rustfmt
