--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["api", "macros", "reddit"]
+members = ["api", "macros", "reddit", "rocket_telemetry"]
 default-members = ["api"]
